v0.52 . . .  fixed broken new_message z-index

--- a/src/css/gmail.css
+++ b/src/css/gmail.css
@@ -29,7 +29,7 @@ div.new_message_button {
  }
 
 /* elements */
-div.new_message { position: absolute; bottom: 0px; width: 541px; right: 30px; padding: 0px; z-index: 1; height: 605px; box-shadow: rgba(0,0,0,0.2) 0 2px 6px; }
+div.new_message { position: absolute; bottom: 0px; width: 541px; right: 30px; padding: 0px; z-index: 5; height: 605px; box-shadow: rgba(0,0,0,0.2) 0 2px 6px; }
 div.new_message iframe { width: 100%; height: 605px; border:none; padding: 0px; margin: 0px; overflow: hidden;}
 
 /* pgp decrypted message */
